--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -9,9 +9,9 @@
     "ecmaVersion": 12
   },
   "rules": {
-    "indent": ["warn", 2],
-    "linebreak-style": ["warn", "unix"],
-    "quotes": ["warn", "single"],
-    "semi": ["warn", "always"]
+    "indent": ["error", 2],
+    "linebreak-style": ["error", "unix"],
+    "quotes": ["error", "single"],
+    "semi": ["error", "always"]
   }
 }
